--- a/backend_birds/package.json
+++ b/backend_birds/package.json
@@ -10,6 +10,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "web-vitals": "^2.1.4",
     "xml-js": "^1.6.11"
   },
