--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "cross-env": "^7.0.3",
+    "konva": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
