--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -17,12 +17,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3030 && react-scripts start",
+    "start": " react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3030",
+
   "eslintConfig": {
     "extends": [
       "react-app",
