--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -11,6 +11,7 @@
     "cross-env": "^7.0.3",
     "konva": "^8.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.3",
     "react-scripts": "5.0.1",
@@ -22,7 +23,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
