--- a/backend_birds/package.json
+++ b/backend_birds/package.json
@@ -15,7 +15,7 @@
     "xml-js": "^1.6.11"
   },
   "scripts": {
-    "start": "NODE_ENV=production nodemon index.js",
+    "start": "node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
     "start:test": "cross-env NODE_ENV=test node index.js",
