--- a/backend_birds/package.json
+++ b/backend_birds/package.json
@@ -17,7 +17,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
+    "build:ui": "rm -rf build && cd ../frontend_birds/ && npm run build && cp -r build ../backend_birds",
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",   
     "start:test": "cross-env NODE_ENV=test node index.js",
     "eject": "react-scripts eject"
   },
