--- a/backend_birds/package.json
+++ b/backend_birds/package.json
@@ -20,7 +20,7 @@
     "build:ui": "rm -rf build && cd ../frontend_birds/ && npm run build && cp -r build ../backend_birds",
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",   
+    "deploy:full": "npm run build:ui && npm run deploy",
     "start:test": "cross-env NODE_ENV=test node index.js",
     "eject": "react-scripts eject"
   },
@@ -46,7 +46,10 @@
   "main": "index.js",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
+    "jest-mock-extended": "^3.0.1",
     "prisma": "^4.8.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
