--- a/backend_birds/package.json
+++ b/backend_birds/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
     "web-vitals": "^2.1.4",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "node index.js",
