--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -26,6 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3030",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,7 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "",
   "main": "index.js",
   "devDependencies": {
     "@types/node": "^18.11.18",
