--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -9,12 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "cross-env": "^7.0.3",
-    "konva": "^8.4.0",
+    "jest-dom": "^4.0.0",
     "plotly.js-dist-min": "^2.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-konva": "^18.2.3",
     "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "swr": "^2.0.0",
