--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "^4.8.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "cross-env": "^7.0.3",
     "jest-dom": "^4.0.0",
@@ -47,10 +44,13 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.11.18",
-    "prisma": "^4.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "eslint-plugin-jest": "^27.0.4",
+    "jest-watch-typeahead": "^0.6.5",
+    "prisma": "^4.8.1"
   },
   "keywords": [],
   "author": "",
