--- a/frontend_birds/package.json
+++ b/frontend_birds/package.json
@@ -8,6 +8,7 @@
     "cross-env": "^7.0.3",
     "jest-dom": "^4.0.0",
     "plotly.js-dist-min": "^2.17.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
