--- a/backend_birds/package.json
+++ b/backend_birds/package.json
@@ -47,6 +47,7 @@
   "main": "index.js",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "eslint": "^8.32.0",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "prisma": "^4.8.1",
