--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -15,19 +15,19 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install dependencies on back end
-        run: cd /backend_birds npm i
+        run: cd /backend_birds && npm i
 
       - name: Install dependencies on front end
-        run: cd /frontend_birds npm i
+        run: cd /frontend_birds && npm i
 
       - name: Build the application
         run: npm run build:ui
 
       - name: Run tests for back end
-        run: cd /backend_birds npm run test
+        run: cd /backend_birds &&  npm run test
 
       - name: Run tests for front end
-        run: cd /frontend_birds npm run test
+        run: cd /frontend_birds && npm run test
 
   deploy:
     name: Deploy app
