--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -15,19 +15,24 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install dependencies on back end
-        run: cd /birds/backend_birds && npm i
+        run: npm i
+        working-directory: backend_birds
 
       - name: Install dependencies on front end
-        run: cd /birds/frontend_birds && npm i
+        run: npm i
+        working-directory: frontend_birds
 
-      - name: Build the application
-        run: npm run build:ui
+      # - name: Build the application
+      #   run: npm run build:ui
+      #   working-directory: backend_birds
 
       - name: Run tests for back end
-        run: cd /birds/backend_birds &&  npm run test
+        run: npm run test
+        working-directory: backend_birds
 
       - name: Run tests for front end
-        run: cd /birds/frontend_birds && npm run test
+        run: npm run test
+        working-directory: frontend_birds
 
   deploy:
     name: Deploy app
