--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -22,6 +22,10 @@ jobs:
         run: npm i
         working-directory: frontend_birds
 
+      - name: Initialize prisma
+        run: npx prisma migrate dev && npx prisma generate
+        working-directory: backend_birds
+
       # - name: Build the application
       #   run: npm run build:ui
       #   working-directory: backend_birds
