--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,5 +1,10 @@
 name: Continuous Integration
 
+- name: Create .env file
+  uses: SpicyPizza/create-envfile@v1.3.0
+
+
+
 on: push
 
 jobs:
@@ -22,9 +27,16 @@ jobs:
         run: npm i
         working-directory: frontend_birds
 
+      - name: create databases for testing
+        run: 
+          touch test.db
+          touch dev.db
+
       - name: Initialize prisma
         run: npx prisma migrate dev && npx prisma generate
         working-directory: backend_birds
+        with:
+          envkey_DATABASE_RUL: ${{ secrets.SECRET_KEY }}
 
       # - name: Build the application
       #   run: npm run build:ui
