--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -1,7 +1,7 @@
 name: Continuous Integration
 
-- name: Create .env file
-  uses: SpicyPizza/create-envfile@v1.3.0
+name: Create .env file
+uses: SpicyPizza/create-envfile@v1.3.0
 
 
 
