--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create .env file
         uses: SpicyPizza/create-envfile@v1.3.0
          with:
-          envkey_DATABASE_RUL: ${{ secrets.SECRET_KEY }}
+          envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: create databases for testing
         run: 
