--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -14,34 +14,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install dependencies on back end
-        run: npm i
-        working-directory: backend_birds
+      # - name: Install dependencies on back end
+      #   run: npm i
+      #   working-directory: backend_birds
 
       - name: Install dependencies on front end
         run: npm i
         working-directory: frontend_birds
 
-      - name: Create .env file
-        uses: SpicyPizza/create-envfile@v1.3.0
-        with:
-          envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      # - name: Create .env file
+      #   uses: SpicyPizza/create-envfile@v1.3.0
+      #   with:
+      #     envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-      - name: create databases for testing
-        run: touch test.db
-          touch dev.db
+      # - name: create databases for testing
+      #   run: touch test.db
+      #     touch dev.db
 
-      - name: Initialize prisma
-        run: npx prisma migrate dev && npx prisma generate && npm prisma-migrate
-        working-directory: backend_birds
+      # - name: Initialize prisma
+      #   run: npx prisma migrate dev && npx prisma generate && npm prisma-migrate
+      #   working-directory: backend_birds
 
       # - name: Build the application
       #   run: npm run build:ui
       #   working-directory: backend_birds
 
-      - name: Run tests for back end
-        run: npm run test
-        working-directory: backend_birds
+      # - name: Run tests for back end
+      #   run: npm run test
+      #   working-directory: backend_birds
 
       - name: Run tests for front end
         run: npm run test
