--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -54,6 +54,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: npm run build:full
+        with:
+          args: deploy
+        # - run: npm run build:full
+
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
